# LearnSDL

./: .gitignore  CMakeLists.txt
3rdlibs/sdl/: CMakeLists.txt
cmake/: CMakeLists.txt  addtarget.cmake
test/: CMakeLists.txt
test/src/: test.cpp
