add_library(SDL::all SHARED IMPORTED GLOBAL)
set_target_properties(
    SDL::all
    PROPERTIES
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include"

    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/bin/SDL2.dll"
    IMPORTED_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/bin/SDL2.lib"

    IMPORTED_LINK_INTERFACE_LANGUAGES "C"
)

add_library(SDL::main SHARED IMPORTED GLOBAL)
set_target_properties(
    SDL::main
    PROPERTIES
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include"

    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/bin/SDL2.dll"
    IMPORTED_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/bin/SDL2main.lib"

    IMPORTED_LINK_INTERFACE_LANGUAGES "C"
)

add_library(SDL::SDL INTERFACE IMPORTED GLOBAL)
target_link_libraries(SDL::SDL INTERFACE SDL::all SDL::main)
